test/trivial/vass/pragma-error-unrecognized-1.good
pragma-error-unrecognized-1.chpl:1: syntax error: unknown pragma "this is a non-existing pragma"
