test/trivial/vass/pragma-error-unrecognized-1.chpl
pragma "this is a non-existing pragma" proc test() { return; }
